# AIoT_notebook

./: .gitignore  README.md  requirements-txt
ML/Linear-classification/: fetch_lfw_people.ipynb  homework.ipynb  homework_task.md  multi_class_handwritten_digit.ipynb  predict_tianchi_industrial_steam_volume.ipynb  pyproject.toml  records.csv
ML/Linear-classification/models/: best_digits_logistic.pkl  digits_logistic_pipeline.pkl
ML/Linear-classification/outputs/: ElasticNet.pkl  Lasso.pkl  SVR-rbf.pkl  fusion_pred.txt  linear_pred.txt  poly_pred.txt  sigmoid_pred.txt  svr_pred.txt
ML/linear-regression/: .gitignore  pyproject.toml
ML/linear-regression/intelligent_power_plant_industrial_steam_volume_project_forecasting_practice/: data_exploration.ipynb  feature_engineering.ipynb  model_prediction.ipynb
ML/linear-regression/intelligent_power_plant_industrial_steam_volume_project_forecasting_practice/data/: bagging_result.txt  processed_zhengqi_data2.csv  test_data_pca.npz  train_data_pca.npz
ML/linear-regression/intelligent_power_plant_industrial_steam_volume_project_forecasting_practice/export_data/: GBDT模型预测(降维数据).txt  GBDT模型预测(非降维数据).txt  GBDT模型预测（降维数据）.txt  GBDT模型预测（非降维数据）.txt  SVR--poly模型预测(非降维数据).txt  SVR-poly模型预测(降维数据).txt  SVR模型预测(降维数据).txt  SVR模型预测(非降维数据).txt  Xgboost模型预测(降维数据).txt  Xgboost模型预测(非降维数据).txt  bagging_result.txt  lightGBM模型预测(降维数据).txt  lightGBM模型预测(非降维数据).txt  多元线性回归模型预测(降维数据).txt  多元线性回归模型预测(非降维数据).txt  随机森林模型预测(降维数据).txt  随机森林模型预测(非降维数据).txt
ML/perform_unsupervised_learning/: apply_dimensionality_reduction.ipynb  cluster_analysis_01.ipynb  cluster_analysis_01_agent.ipynb  pyproject.toml  task.md  write_manual_pca.ipynb  降维系列算法高级作业.md
ML/perform_unsupervised_learning/data/inputs/: car_data.csv
ML/perform_unsupervised_learning/docs/: 聚类算法.md
机器学习/: pyproject.toml  test_ml_imports.py
机器学习/线性回归/智能发电厂工业蒸汽量项目预测实战/: data_exploration.ipynb  feature_engineering.ipynb  model_prediction.ipynb  processed_zhengqi_data.csv  test.ipynb
机器学习/线性回归/智能发电厂工业蒸汽量项目预测实战/data/: processed_zhengqi_data.csv  processed_zhengqi_data2.csv
机器学习/线性回归/智能发电厂工业蒸汽量项目预测实战/export_data/: SVR--poly模型预测(非降维数据).txt  SVR-poly模型预测(降维数据).txt  SVR模型预测(降维数据).txt  SVR模型预测(非降维数据).txt  多元线性回归模型预测(降维数据).txt  多元线性回归模型预测(非降维数据).txt  随机森林模型预测(降维数据).txt  随机森林模型预测(非降维数据).txt
