[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-project"
version = "0.1.0"
description = "Machine Learning Project with Core Libraries"
readme = "README.md"
authors = [{ name = "lanshi", email = "yhvguk@stu.hunau.edu.cn" }]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "scikit-learn>=1.0.0",
    "lightgbm>=3.2.0",
    "xgboost>=1.7.6",
    "ipykernel>=6.25.0",
    "seaborn>=0.10.0",
    "requests>=2.32.4",
]

[project.optional-dependencies]
dev = ["pytest>=6.0", "black>=21.0", "flake8>=3.9.0", "mypy>=0.910"]
notebook = ["jupyter>=1.0.0", "ipywidgets>=7.6.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.uv]
dev-dependencies = ["pytest>=6.0", "black>=21.0", "flake8>=3.9.0"]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple/"  # 备用镜像
extra-index-url = [
    "https://mirrors.aliyun.com/pypi/simple/",
    "https://pypi.org/simple/"
]

