[project]
name = "perform-unsupervised-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  # 基础环境
  "jupyterlab>=4.5.6",
  "ipykernel>=6.29,<7",
  # 常用科学计算
  "numpy>=1.26,<3",
  "pandas>=2.2,<3",
  "matplotlib>=3.8,<4",
  "seaborn>=0.13,<1",
  "tqdm[notebook]>=4.67.3",
  "scikit-learn>=1.8.0",
  "langgraph>=1.1.6",
  "langchain-openai>=1.1.12",
  "langchain>=1.2.15",
  "langgraph-checkpoint>=3.0.1",
  "langgraph-checkpoint-postgres>=3.0.5",
  "dotenv>=0.9.9",
  "sentence-transformers>=5.3.0",
  "accelerate>=1.13.0",
  "loguru>=0.7.3",
  "mermaid-py>=0.8.4",
  "pydantic-settings>=2.14.0",
]
[project.optional-dependencies]
# ------------------------------------------------------------
# 核心增强：编辑器 / 代码质量 / 交互能力
# ------------------------------------------------------------
enhanced = [
  # 代码格式化
  "jupyterlab-code-formatter>=3,<4",
  "black>=25.12.0,<27",

  # LSP / 跳转定义 / 智能提示
  "jupyterlab-lsp>=5.1.1,<6",
  "jupyterlab-kernelspy",
  "python-lsp-server[all]>=1.12,<2",


]

